# nearest_airplane

./: Cargo.toml  README.md  test-input.txt  watch.sh
src/: main.rs
test/: opensky_states_all.json
