[package]
name = "nearest_airplane"
version = "0.1.0"
authors = ["Oisín Mac Fhearaí <denpashogai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
attohttpc = "0.15.0"
